<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/survey_1_26_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/one_N26"
            >
            <RadioButton
                android:id="@+id/one_N26_1"
                android:text="@string/survey_1_26_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N26_2"
                android:text="@string/survey_1_26_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N26_3"
                android:text="@string/survey_1_26_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/survey_1_27_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/one_N27"
            >
            <RadioButton
                android:id="@+id/one_N27_1"
                android:text="@string/survey_1_27_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N27_2"
                android:text="@string/survey_1_27_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N27_3"
                android:text="@string/survey_1_27_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/one_N27_4"
                android:text="@string/survey_1_27_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N27_5"
                android:text="@string/survey_1_27_a5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/one_N27_6"
                android:text="@string/survey_1_27_a6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:text="@string/survey_1_28_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/one_N28"
            >
            <RadioButton
                android:id="@+id/one_N28_1"
                android:text="@string/survey_1_28_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N28_2"
                android:text="@string/survey_1_28_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/one_N28_3"
                android:text="@string/survey_1_28_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/one_N28_4"
                android:text="@string/survey_1_28_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RadioGroup>
    </LinearLayout>



</LinearLayout>